// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text text measurements should measure text currently 1`] = `
{
  "height": 16.81640625,
  "lineHeight": 24,
  "width": 123.30000305175781,
}
`;

exports[`Text text measurements should measure text currently 2`] = `
{
  "height": 33.890625,
  "lineHeight": 48,
  "width": 257.30078125,
}
`;

exports[`Text text measurements should measure text size currently 1`] = `
{
  "height": 16.81640625,
  "lineHeight": 24,
  "width": 123.30000305175781,
}
`;

exports[`Text text measurements should measure text size currently 2`] = `
{
  "height": 33.890625,
  "lineHeight": 48,
  "width": 257.29998779296875,
}
`;
